Avoid useless horizontal scrollbar

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,7 +9,6 @@
 body {
   margin-left: 10px;
   margin-top: 50px;
-  width: 100%;
   display: flex;
 }
 
